--- a/sites/vn_temp/css/main.css
+++ b/sites/vn_temp/css/main.css
@@ -1,4 +1,4 @@
-/* 
+/*
 #0b0C10 - background
 #1F2833 - deep blue
 #e1e5e8 - gray (font)
@@ -76,9 +76,14 @@ body {
 }
 
 #highlightCarousel {
-	border-bottom: 2px solid;
-	border-bottom-color: #4d4dff;
+	border-bottom: 2px solid #4d4dff;
+	border-top: 2px solid #4d4dff;
 	margin-top: 16px;
+	min-height: 350px;
+}
+
+#highlightCarousel img {
+	min-height: 350px;
 }
 
 #category {
@@ -123,6 +128,10 @@ body {
 	z-index: 1;
 }
 
+.vnHighlightContainer {
+	z-index: 0;
+}
+
 #thumbCW {
 	display: block;
 	text-align: left;
@@ -132,84 +141,6 @@ body {
 	position: absolute;
 	bottom: 8px;
 	font-size: 14px;
-}
-
-.shoujoContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.fsnContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.clannadContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.mgqContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.snuContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.planetarianContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.ninesContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.dogsContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.lbContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.pwContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.rewriteContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.amnesiaContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
-}
-
-.dramaticalContainer {
-	width: 160px;
-	height: 228px;
-	display: block;
 }
 
 #thumbCW a {
@@ -267,14 +198,40 @@ body {
 	animation: fadein 0.5s;
 }
 
-.vnContainer .vnHover {
-	display: none;
-}
-
 .vnContainer:hover .vnHover {
 	display: block;
 }
 
+.vnHighlightContainer .vnHoverMain {
+	display: none;
+}
+
+.vnHighlightContainer:hover .vnHoverMain {
+	display: block;
+	position: absolute;
+	top: 0px;
+	background-color: #0b0c10c2;
+	width: 100%;
+	height: 100%;
+	border-top: 2px solid #4d4dff;
+	padding-left: 15%;
+	padding-top: 5%;
+	-webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+	-moz-animation: fadein 0.5s; /* Firefox < 16 */
+	-ms-animation: fadein 0.5s; /* Internet Explorer */
+	-o-animation: fadein 0.5s; /* Opera < 12.1 */
+	animation: fadein 0.5s;
+}
+
+.highlightTitle {
+	font-size: 1.3em;
+}
+
+.highlightDesc {
+	font-size: 0.6em;
+	line-height: 1.6;
+	width: 40%;
+}
 
 /*************************/
 
@@ -388,4 +345,26 @@ body {
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+.mobileNav {
+	display: none;
+}
+
+@media screen and (max-width:767px) {
+	#highlightCarousel {
+		display: none;
+	}
+
+	#highlightCarouselTitle {
+		display: none;
+	}
+
+	.mobileNav {
+		display: block;
+	}
+
+	.webNav {
+		display: none;
+	}
 }
